--- a/css/common.scss
+++ b/css/common.scss
@@ -374,6 +374,7 @@ textarea.ui-input-text {
                     background-position: 15px 50%;
                     font-size: 12px;
                     line-height: 35px;
+                    letter-spacing: -1px;
                 }
             }
             > .btn-more {
