--- a/css/common.scss
+++ b/css/common.scss
@@ -30,6 +30,9 @@ ul, ol {
 figure {
     margin: 0;
 }
+.ui-header .ui-title {
+    margin: 0 20%;
+}
 .ui-content {
     padding: 0;
 }
@@ -194,6 +197,7 @@ textarea.ui-input-text {
                 letter-spacing: -1px;
             }
             .profile {
+                display: block;
                 margin-top: 70px;
                 img {
                     display: block;
@@ -468,6 +472,45 @@ textarea.ui-input-text {
         img {
             width: 100%;
             height: 100%;
+        }
+    }
+}
+#profileUpload-screen {
+    opacity: .85;
+}
+#profileUpload {
+    padding: 15px 15px 20px;
+    box-shadow: none;
+    border: 0;
+    border-radius: 5px;
+    background-color: #f2efeb;
+    label {
+        margin-bottom: 15px;
+        color: #ff7214;
+        font-size: 16px;
+        font-weight: bold;
+    }
+    .ui-input-text {
+        padding: 10px;
+        font-size: 13px;
+        line-height: 23px;
+        input {
+            padding: 0;
+        }
+    }
+    .btn-area {
+        padding-top: 20px;
+        border-top: 1px solid #ddd6cd;
+        .ui-block-a {
+            padding-right: 5px;
+        }
+        .ui-block-b {
+            padding-left: 5px;
+        }
+        .ui-btn {
+            width: 100%;
+            height: 45px;
+            line-height: 45px;
         }
     }
 }
@@ -1571,6 +1614,30 @@ textarea.ui-input-text {
                         letter-spacing: -1px;
                         font-weight: normal;
                     }
+                }
+            }
+        }
+    }
+    &.request-cert {
+        .request-cert-form {            
+            textarea.ui-input-text {
+                padding-top: 10px;
+                padding-bottom: 10px;
+                font-size: 13px;
+                line-height: 23px;
+            }
+            .btn-area {
+                padding: 20px 15px;
+                .ui-block-a {
+                    padding-right: 10px;
+                }
+                .ui-block-b {
+                    padding-left: 10px;
+                }
+                .ui-btn {
+                    width: 100%;
+                    height: 45px;
+                    line-height: 45px;
                 }
             }
         }
